--- a/src/templates/sign-in.html
+++ b/src/templates/sign-in.html
@@ -4,44 +4,78 @@
 {% endblock %}
 {% block content %}
     <div class="flex flex-row items-center justify-center w-screen h-screen">
-        <div class="sm:block hidden">
-            <img src="https://i.pinimg.com/564x/65/dc/a6/65dca69f78972935caf61580e7c17bd9.jpg" alt="">
+        <div class="sm:block hidden sm:w-1/2">
+            <img src="https://i.pinimg.com/564x/65/dc/a6/65dca69f78972935caf61580e7c17bd9.jpg" alt="" class="w-full">
         </div>
-        <div class="p-10 flex flex-col space-y-5 text-gray-700">
-            <div class="text-3xl font-bold flex flex-row space-x-3 items-center">
-                <div>
-                    <h1>Sign in</h1>
-                </div>
-                <div>
-                    <i class="fa-solid fa-circle-arrow-right"></i>
-                </div>
-            </div>
-            <div class="flex flex-row space-x-3 items-center">
-                <div>
-                    <i class="fa-solid fa-bullhorn"></i>
-                </div>
-                <div>
-                    <p>Welcome! you are now on Khmer Voice ASR platform.</p>
-                </div>
-            </div>
-            <div>
-                <form method="post">
-                    {{sign_in_form.hidden_tag()}}
-                    <div class="flex flex-col space-y-5 max-w-min">
-                        <div>
-                            {{sign_in_form.username(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2', placeholder='username')}}
-                        </div>
-                        <div>
-                            {{sign_in_form.password(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2', placeholder='password')}}
-                        </div>
-                        <div>
-                            <hr>
-                        </div>
-                        <div>
-                            {{sign_in_form.submit(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2 w-full cursor-pointer hover:bg-blue-700 hover:border-blue-700 hover:text-white')}}
-                        </div>
+        <div class="sm:w-1/2">
+            <div class="sm:p-10 flex flex-col space-y-5 text-gray-700 max-w-min">
+                <div class="text-3xl font-bold flex flex-row space-x-3 items-center">
+                    <div>
+                        <h1>Sign in</h1>
                     </div>
-                </form>
+                    <div>
+                        <i class="fa-solid fa-circle-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="flex flex-row space-x-3 items-center py-4">
+                    <div>
+                        <i class="fa-solid fa-bullhorn"></i>
+                    </div>
+                    <div>
+                        <p>Welcome! you are now on Khmer Voice ASR platform.</p>
+                    </div> 
+                </div>
+                <div class="max-w-min">
+                    <form method="post">
+                        {{sign_in_form.hidden_tag()}}
+                        <div class="flex flex-col space-y-5 max-w-min">
+                            <div>
+                                {{sign_in_form.username(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2', placeholder='username')}}
+                            </div>
+                            <div>
+                                {{sign_in_form.password(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2', placeholder='password')}}
+                            </div>
+                            <div>
+                                <hr>
+                            </div>
+                            <div>
+                                {{sign_in_form.submit(class='border outline-none border-gray-700 text-gray-700 rounded-md px-4 py-2 w-full cursor-pointer hover:bg-blue-700 hover:border-blue-700 hover:text-white')}}
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="font-bold text-center w-full">
+                    <p>Or</p>
+                </div>
+                <div class="flex flex-row items-center justify-between">
+                    <div>
+                        <a href="">
+                            <div class="flex flex-row space-x-3 items-center py-2 px-4 text-white bg-red-500 rounded-md">
+                                <div>
+                                    <i class="fa-brands fa-google"></i>
+                                </div>
+                                <div>
+                                    Google
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <div class="flex flex-row space-x-3 items-center py-2 px-4 text-white bg-blue-500 rounded-md">
+                                <div>
+                                    <i class="fa-brands fa-facebook"></i>
+                                </div>
+                                <div>
+                                    Facebook
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <p>Don't have account yet? <span class=" font-bold"><a href="{{url_for('register_page')}}" class="hover:underline">Register</a></span></p>
+                </div>
             </div>
         </div>
     </div>
