--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,5 +3,11 @@
     Khmer ASR System
 {% endblock %}
 {% block content %}
-    <h1>This is home page</h1>
+    <div class="w-screen h-screen p-5">
+        <div class="w-full h-2/3 bg-cover rounded-md opacity-100 px-14 py-14" style="background-image: url('https://images.squarespace-cdn.com/content/v1/59b5da1a49fc2b50d0978fa1/1621808453071-7U68BE5XEIAFAYKLKISJ/agile-digital-transformation-16x9.png') ;">
+            <div class="text-white p-3 rounded-md bg-pink-600 w-max">
+                <p>Get Started Now</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
