--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -77,13 +77,20 @@
     </div>
   </div>
   
-  <div>
+  <div class="p-3">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
-        <div class="flex-row item-center justify-between alert bg-yellow-100 rounded-lg py-5 px-10 mb-3 text-center text-yellow-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
-          <div>{{message}}</div>
-          <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-yellow-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close">&#x274C;</button></div>
+        <div class="flex-row item-center justify-between alert bg-red-200 rounded-lg py-3 px-10 mb-3 text-center text-red-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
+          <div class="flex flex-row space-x-3 items-center">
+            <div>
+              <i class="fa-solid fa-circle-xmark"></i>
+            </div>
+            <div>
+              {{message}}
+            </div>
+          </div>
+          <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-red-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close">&#x274C;</button></div>
         </div>
       {% endfor %}
       {% endif %}
