--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -76,7 +76,7 @@
             </div>
             <div class="flex flex-row items-center justify-between w-full space-x-5">
                 <div class="w-1/2">
-                    <a href="">
+                    <a href="{{url_for('google_signin')}}">
                         <div class="flex flex-row space-x-3 items-center justify-center py-2 px-4 sm:px-16 text-white bg-red-500 rounded-md">
                             <div>
                                 <i class="fa-brands fa-google"></i>
