--- a/src/templates/sign-in.html
+++ b/src/templates/sign-in.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="flex flex-row items-center justify-between">
                     <div>
-                        <a href="">
+                        <a href="{{url_for('google_signin')}}">
                             <div class="flex flex-row space-x-3 items-center py-2 px-4 text-white bg-red-500 rounded-md">
                                 <div>
                                     <i class="fa-brands fa-google"></i>
