--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -16,7 +16,7 @@
       <div class="flex flex-row space-x-8 items-center">
         <div class="uppercase py-2 px-4 rounded-md bg-white text-gray-700">
           <h1>
-            <a href="">Dashboard</a>
+            <a href="{{url_for('dashboard_page')}}">Dashboard</a>
           </h1>
         </div>
         <div class="uppercase">
