--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -47,7 +47,7 @@
                     </div>
                     <hr>
                     <div>
-                        <a href="">
+                        <a href="{{url_for('dashboard_record_audio')}}">
                             <div class="flex flex-row items-center space-x-3">
                                 <div>
                                     <i class="fa-solid fa-music"></i>
