--- a/src/templates/dashboard/record_audio.html
+++ b/src/templates/dashboard/record_audio.html
@@ -1,4 +1,4 @@
 {% extends 'dashboard/dashboard.html' %}
 {% block dashboard_content %}
-    {{records[4].filename}}
+    {{records}}
 {% endblock %}
