--- a/src/templates/record.html
+++ b/src/templates/record.html
@@ -3,7 +3,8 @@
     Record
 {% endblock %}
 {% block content %}
-    <div class="w-screen h-screen">
+    <h1>This is recording screen</h1>
+    <!-- <div class="w-screen h-screen">
         <div class="flex fle-row">
             <div class="flex flex-col justify-center px-20 space-y-5 text-gray-700">
                 <div class="flex flex-row items-center space-x-3 text-3xl">
@@ -110,5 +111,5 @@
                 }
             })
         }
-    </script>
+    </script> -->
 {% endblock %}
