--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -14,11 +14,6 @@
     </div>
     <div class="sm:flex flex-row items-center justify-between hidden">
       <div class="flex flex-row space-x-8 items-center">
-        <div class="uppercase py-2 px-4 rounded-md bg-white text-gray-700">
-          <h1>
-            <a href="{{url_for('dashboard_page')}}">Dashboard</a>
-          </h1>
-        </div>
         <div class="uppercase">
           <h1>
             <a href="{{ url_for('home_page') }}">Home</a>
@@ -26,7 +21,7 @@
         </div>
         <div class="uppercase">
           <h1>
-            <a href="{{url_for('record_page')}}">Record Voice</a>
+            <a href="{{url_for('task_page')}}">Task</a>
           </h1>
         </div>
       </div>
@@ -77,7 +72,7 @@
     </div>
   </div>
   
-  <div class="p-3">
+  <div class="">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
