--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
             <div class="w-1/5 h-full p-3 border rounded-md">
                 <div class="flex flex-col space-y-3 justify-center">
                     <div>
-                        <a href="">
+                        <a href="{{url_for('dashboard_overvie_page')}}">
                             <div class="flex flex-row items-center space-x-3">
                                 <div>
                                     <i class="fa-solid fa-gauge-high"></i>
