--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -102,7 +102,7 @@
                                 <i class="fa-solid fa-right-from-bracket"></i>
                               </div>
                               <div>
-                                <a href="{{url_for('signout_page')}}">Sign out</a>
+                                <a href="{{url_for('signin_page')}}">Sign out</a>
                               </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                 {% else %}
                     <div class="flex flex-row space-x-5 items-center">
                         <div class="p-3 border border-black hover:border-white rounded-md ease-out duration-150">
-                            <a href="">
+                            <a href="/sign-in">
                                 <div class="flex flex-row space-x-3 items-center">
                                     <div>
                                         <i class="fa-solid fa-right-to-bracket"></i>
@@ -125,7 +125,7 @@
                             |
                         </div>
                         <div class="p-3 border border-black hover:border-white rounded-md ease-out duration-150">
-                            <a href="">
+                            <a href="{{url_for('register_page')}}">
                                 <div class="flex flex-row space-x-3 items-center">
                                     <div>
                                         <i class="fa-solid fa-user-pen"></i>
